# debx

./: .coverage  README.md  pyproject.toml
.github/workflows/: tests.yml
debx/: __init__.py  __main__.py  ar.py  builder.py  deb822.py  reader.py
debx/cli/: inspect.py  pack.py  sign.py  types.py  unpack.py
tests/: test_ar.py  test_builder.py  test_cli_inspect.py  test_cli_sign.py  test_cli_unpack.py  test_coverage.py  test_deb822.py  test_entrypoint.py  test_integration.py  test_main.py  test_reader.py
