[project]
name = "debx"
version = "0.2.12"
description = "Minimal Python library to programmatically construct and inspect Debian .deb packages"
readme = "README.md"
authors = [
  { name = "Dmitry Orlov", email = "me@mosquito.su" }
]
license = "MIT"
license-files = ["COPYING"]
requires-python = ">=3.10"
keywords = [
    "administrator",
    "apt",
    "ar",
    "archive",
    "automation",
    "build",
    "cross-platform",
    "deb",
    "debian",
    "development",
    "devops",
    "dpkg",
    "infrastructure",
    "library",
    "linux",
    "macos",
    "package",
    "packaging",
    "system",
    "tool",
    "windows",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
    "Typing :: Typed",
]

dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coveralls>=4.0.2",
    "markdown-pytest>=0.3.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.61",
]

[project.urls]
"Homepage" = "https://github.com/mosquito/debx"
"Repository" = "https://github.com/mosquito/debx"
"Issues" = "https://github.com/mosquito/debx/issues"
"Documentation" = "https://github.com/mosquito/debx/wiki"

[project.scripts]
"debx" = "debx.__main__:main"

[tool.coverage.run]
branch = true
source = ["debx"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["debx", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "TID",  # flake8-tidy-imports
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["debx"]
lines-after-imports = 2

[tool.ruff.lint.flake8-tidy-imports]
# Allow sibling imports (from .module) but forbid parent-relative imports (from ..pkg).
ban-relative-imports = "parents"

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["debx"]

[tool.ty.rules]
possibly-missing-attribute = "error"
possibly-missing-import = "error"
possibly-unresolved-reference = "error"
unused-ignore-comment = "error"
